# librelay

./: .gitmodules  .travis.yml  README.md  meson.build
.github/workflows/: ci.yml
ci/: install-packages.sh  integration-tests.sh  setup-librelay.sh  setup-prereq-ext.sh  setup-prereq.sh
include/librelay/: Connection.h  librelay.h
scripts/: setup-prereq.sh
src/: meson.build
src/client/: ConnectionImpl.cpp  ConnectionImpl.h  librelay.cpp  meson.build
src/common/: defines.h
src/edge-node/: main.cpp  meson.build
src/node/: MessageCache.h  NetworkConfig.cpp  NetworkConfig.h  Node.cpp  Node.h  Peer.cpp  Peer.h  Storage.cpp  Storage.h  meson.build  sighandler.h
src/relay-node/: main.cpp  meson.build
test/: main.cpp  relay.conf  testnet-edge.py  testnet.py
